# hotkey

./: .gitignore  LICENSE  README.md  hotkey-drill-test  hotkey-run  hotkey.sublime-project  pylama.ini  pyproject.toml
hotkey/: __about__.py  __init__.py  drill.py  error.py  key.py  key_combo.py  main.py  mode.py  utils.py
hotkey/key_combo_lists/: key_combo_list_interface.py  key_combo_list_mix.py  key_combo_list_obsidian.py  key_combo_list_sublime.py  key_combo_list_terminal.py  key_combo_list_universal.py  key_combo_list_vscode.py
hotkey/tests/: event_fake.py  key_combo_test.py  key_test.py  mode_test.py
tests/: event_fake.py  key_combo_test.py  key_test.py  mode_test.py
